--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -264,4 +265,6 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,dotenv,node,webstorm
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
+package-lock.jason
+yarn.lock
 
