--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -284,4 +285,5 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/webstorm,visualstudiocode,node,macos,dotenv,chocolatey,yarn
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
-
+package.local.json
+yarn.lock
