--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,dotenv,node,webstorm
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,macos,dotenv,node,webstorm
-
+/node module
 ### dotenv ###
 .env
 
@@ -13,7 +13,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -265,3 +266,5 @@ fabric.properties
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+pckage-local.json
+yarn.lock
