--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
-                                    {
-  "name": "hapt-static",
-  "version": "1",
-  "description": "satatic html ans css & js files",
-  "main": "index.html",
-  "repository": "https://github.com/horizon-code-academy/hapt-static.git",
-  "author": "Sabrine HAMILA <rinehamila@gmail.com>"               ,
-  "license": "MIT"
+{
+          "name": "hapt-static",
+          "version": "1",
+          "description": "satatic html ans css & js files",
+          "main": "index.html",
+          "repository": "https://github.com/horizon-code-academy/hapt-static.git",
+          "author": "Sabrine HAMILA <rinehamila@gmail.com>",
+          "license": "MIT",
+          "dependencies": {
+                    "http-server": "^0.12.3"
+          },
+          "devDependencies": {
+                    "eslint": "^7.19.0"
+          }
 }
