--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "main": "index.html",
   "repository": "https://github.com/horizon-code-academy/hapt-static.git",
   "author": "Team horizon <contact@hapt.tn>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "http-server": "^0.12.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.19.0"
+  }
 }
