--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "https://github.com/horizon-code-academy/hapt-static.git",
   "author": "Team Horizon <contact@hapt.tn>",
   "license": "MIT",
+  "scripts":{
+    "start": "http-server -p 9000"
+  },
   "dependencies": {
     "http-server": "^0.12.3"
   },
